--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@hotwired/stimulus": "^3.2.2",
     "@tauri-apps/api": "^1"
   },
   "devDependencies": {
