--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "author": "Sikelio",
+  "homepage": "https://github.com/sikelio/sikontrol",
+  "bugs": {
+    "url": "https://github.com/sikelio/sikontrol/issues"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -11,7 +16,8 @@
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
-    "@tauri-apps/api": "^1"
+    "@tauri-apps/api": "^1",
+    "toml": "^3.0.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1",
