--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@tauri-apps/api": "^1",
+    "tauri-plugin-store-api": "https://github.com/tauri-apps/tauri-plugin-store#v1",
     "toml": "^3.0.0"
   },
   "devDependencies": {
