--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@tauri-apps/api": "^1",
     "sweetalert2": "^11.10.6",
+    "tauri-plugin-autostart-api": "https://github.com/tauri-apps/tauri-plugin-autostart#v1",
     "tauri-plugin-store-api": "https://github.com/tauri-apps/tauri-plugin-store#v1",
     "toml": "^3.0.0"
   },
