--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "sikontrol"
 version = "2.0.0"
-description = "A Tauri App"
+description = "Sikontrol"
 authors = ["you"]
 edition = "2021"
 
