Added socket io implementation in rust

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,12 @@ serde_json = "1"
 local-ip-address = "0.6.1"
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+socketioxide = "0.12.0"
+tokio = { version = "1.36.0", features = ["full"] }
+axum = "0.7.4"
+tower-http = {version = "0.5.0", features = ["cors"] }
+tower = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
