--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "toml": "^3.0.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@tauri-apps/cli": "^1",
     "autoprefixer": "^10.4.18",
     "daisyui": "^4.7.3",
