--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,7 @@ axum = "0.7.4"
 tower-http = {version = "0.5.0", features = ["cors"] }
 tower = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
+enigo = "0.1.3"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
