--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,18 @@ tower-http = {version = "0.5.0", features = ["cors"] }
 tower = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
 enigo = "0.1.3"
+windows = { version = "0.54.0", features = [
+    "implement",
+    "Win32_Media_Audio",
+    "Win32_System_Com",
+    "Win32_Media_Audio_Endpoints",
+    "Win32_System_Com_StructuredStorage",
+    "Win32_UI_Shell_PropertiesSystem",
+    "Win32_Devices_FunctionDiscovery",
+    "Win32_Foundation",
+    "Win32_System_Threading",
+    "Win32_System_ProcessStatus"
+] }
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
