--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,6 +36,7 @@ windows = { version = "0.54.0", features = [
     "Win32_System_Threading",
     "Win32_System_ProcessStatus"
 ] }
+regex = "1.10.4"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
